fixed input align

--- a/EasyJob/src/app/app-dashboard/dashboard/dashboard-view/dashboard-view.component.scss
+++ b/EasyJob/src/app/app-dashboard/dashboard/dashboard-view/dashboard-view.component.scss
@@ -63,13 +63,17 @@
       padding: 0;
       input {
         display: block;
+        // display: flex;
+        // align-items: center
+        // vertical-align: middle;
         box-sizing: border-box;
         width: 100%;
         padding: 10px;
         font-size: 15px;
+        margin: 0;
         outline-style: none;
         border: solid 1px #aaaaaa;
-        border-radius: 10px;
+        border-radius: 5px;
         transition: all 0.5s;
         // margin: 0 10px 0 0;
       }
@@ -77,13 +81,13 @@
         border-color: #0074d9;
       }
       .material-icons {
-        padding: 5px;
+        // padding: 5px;
         // flex: 1;
         box-sizing: border-box;
         // background-color: #477a9d;
         // color: white;
         cursor: pointer;
-        font-size: 30px;
+        font-size: 35px;
         display: flex;
         justify-content: center;
         // align-items: center;
@@ -99,6 +103,7 @@
         color: white;
         background-color: #477a9d;
         display: block;
+
         width: 100%;
         // flex: 1;
         text-decoration: none;
